--- a/src/anxiety_coping_methods.html
+++ b/src/anxiety_coping_methods.html
@@ -25,6 +25,7 @@
             </nav>
             <div class = "container"><div class = "jumbotron">
                 <header><h1>Anxiety Coping Methods</h1></header>
+            </div>
                 <section>
                     <ul>
                         <li>
@@ -94,7 +95,7 @@
                 </section>
             </article>
 
-            </div></div>
+            </div>
             
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
