--- a/src/anxiety_info.html
+++ b/src/anxiety_info.html
@@ -28,6 +28,7 @@
                 <header>
                     <h1>Anxiety Information</h1>
                 </header>
+            </div>
                 <section>
                 <h2>Overview</h2>
                     <p> 
@@ -72,7 +73,7 @@
                     </ul>
                 </section>
             </article>
-            </div></div>
+            </div>
             
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
