--- a/src/relaxation_activities.html
+++ b/src/relaxation_activities.html
@@ -28,6 +28,7 @@
                 <header>
                     <h1>Relaxation Activities</h1>
                 </header>
+            </div>
                 <section>
                     <ul>
                         <li>
@@ -72,7 +73,7 @@
                 </section>
             </article>
             
-            </div></div>
+            </div>
             
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
