--- a/src/remaining_calm.html
+++ b/src/remaining_calm.html
@@ -28,6 +28,7 @@
                 <header>
                     <h1>Remaining Calm</h1>
                 </header>
+            </div>
                 <section>
                     <p>
                         Everyone faces pressure from time to time. In those moments of intense pressure, it's
@@ -70,7 +71,7 @@
                 </section>
             </article>
 
-            </div></div>
+            </div>
             
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
